# ai-daily-brief

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  daily.yml  health.yml  pages.yml  weekly.yml
config/: sources.yaml
data/: sample_articles.json
src/ai_daily_brief/: __init__.py  cli.py  config.py  dashboard.py  database.py  deepseek.py  health.py  metrics_remote.py  metrics_report.py  metrics_store.py  models.py  pipeline.py  quality.py  schedule_guard.py  weekly_report.py
src/ai_daily_brief/collectors/: __init__.py  github.py  rss.py
src/ai_daily_brief/delivery/: __init__.py  email.py  renderer.py
src/ai_daily_brief/processors/: __init__.py  cleaner.py  deduplicator.py  rules.py
supabase/functions/resend-webhook/: README.md  index.ts
supabase/migrations/: 001_metrics.sql  002_run_quality.sql  003_external_scheduler.sql
templates/: daily_email.html
tests/: test_cleaner.py  test_dashboard.py  test_deduplicator.py  test_deepseek.py  test_email.py  test_health.py  test_metrics.py  test_pipeline.py  test_quality.py  test_rss.py  test_rules.py  test_schedule_guard.py  test_weekly_report.py
