[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-daily-brief"
version = "0.1.0"
description = "Automated, source-grounded Chinese AI industry daily brief"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "feedparser>=6.0.11,<7",
  "httpx>=0.27,<1",
  "Jinja2>=3.1,<4",
  "PyYAML>=6.0,<7",
  "tzdata>=2025.1",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3,<10", "pytest-cov>=7,<8"]

[project.scripts]
ai-daily-brief = "ai_daily_brief.cli:main"
ai-daily-metrics = "ai_daily_brief.metrics_report:main"
ai-daily-health = "ai_daily_brief.health:main"
ai-daily-weekly = "ai_daily_brief.weekly_report:main"
ai-daily-dashboard = "ai_daily_brief.dashboard:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["ai_daily_brief"]

[tool.coverage.report]
fail_under = 65
show_missing = true
skip_covered = true
